fixing logo size on mobile one more time

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -259,8 +259,8 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .logoHeader {
-    max-height: 70%;
-    max-width: 70%;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 .fill {
@@ -338,11 +338,6 @@ body {
 
     .clientLogo {
         padding: 20px;
-    }
-
-    .logoHeader {
-        max-height: 100%;
-        max-width: 100%;
     }
 }
 
